# bson_c_lib

./: .gitignore  BiSON.podspec  LICENSE  Makefile.am  Makefile.in  Package.swift  README.md  README.md~  aclocal.m4  config.h  config.h.in  configure  configure.ac  libbson.pc.in  third_party.md  third_party.txt
BsonJavaPort/: .gitignore  build.gradle  gradle.properties  settings.gradle
BsonJavaPort/bson_java_port/: bintray.gradle  bintray.properties  build.gradle  gradle.properties  proguard-rules.pro
BsonJavaPort/bson_java_port/src/androidTest/java/com/livio/bsonjavaport/: BsonEncoderTests.java  ExampleInstrumentedTest.java
BsonJavaPort/bson_java_port/src/main/: AndroidManifest.xml
BsonJavaPort/bson_java_port/src/main/java/com/livio/BSON/: BsonEncoder.java
BsonJavaPort/bson_java_port/src/main/jni/: Android.mk  bson_jni.c
BsonJavaPort/bson_java_port/src/test/java/com/livio/bsonjavaport/: ExampleUnitTest.java
BsonJavaPort/gradle/wrapper/: gradle-wrapper.properties
lua/: Makefile.am  Makefile.in  bson_lua_wrapper.c
src/: Makefile.am  Makefile.in  bson_array.c  bson_array.h  bson_common.h  bson_object.c  bson_object.h  bson_util.c  bson_util.h  module.modulemap
src/emhashmap/: Makefile.am  Makefile.in
test/: Makefile.am  Makefile.in  bson_object_test.c  bson_util_test.c
